--- a/src/pages/Contact/Contact.css
+++ b/src/pages/Contact/Contact.css
@@ -529,8 +529,6 @@
 @media (min-width: 768px) and (max-width: 1023px) {
   .contact-hero {
     min-height: 55vh;
-    margin-top: -80px !important;
-    padding-top: 80px !important;
   }
 }
 
@@ -538,8 +536,6 @@
 @media (min-width: 1024px) and (max-width: 1366px) {
   .contact-hero {
     min-height: 55vh;
-    margin-top: -85px !important;
-    padding-top: 85px !important;
   }
   
   .contact-hero-container {
