--- a/src/pages/Services/Services.css
+++ b/src/pages/Services/Services.css
@@ -213,8 +213,6 @@
 @media (min-width: 768px) and (max-width: 1023px) {
   .services-hero {
     min-height: 55vh;
-    margin-top: -80px !important;
-    padding-top: 80px !important;
   }
 }
 
@@ -222,8 +220,6 @@
 @media (min-width: 1024px) and (max-width: 1366px) {
   .services-hero {
     min-height: 55vh;
-    margin-top: -85px !important;
-    padding-top: 85px !important;
   }
   
   .services-hero-container {
